log/build_2026-02-03_17-19-39/robot_nodes/stderr.log
  File "/home/gilad/my_roboproto_ws/install/robot_nodes/lib/python3.12/site-packages/robot_nodes/state_machine.py", line 24
    def desicion_logic(self)
                            ^
SyntaxError: expected ':'

